FIX: fixed footer position on mobile

--- a/src/styles/_profile.scss
+++ b/src/styles/_profile.scss
@@ -49,7 +49,6 @@
   .white-bg-block {
 
     @include media-breakpoint-down($desktop-breakpoint) {
-      flex: 1;
       display: flex;
       flex-direction: column;
     }
@@ -105,6 +104,11 @@
   }
 
   .site-footer {
+
+    @include media-breakpoint-down($desktop-breakpoint) {
+      flex: 0 0 auto;
+      width: 100%;
+    }
 
     &.hidden-footer {
 
